# ndmspc

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CODEBASE.md  Dockerfile  LICENSE  README.md  Untitled.ipynb
Core/: Axis.cxx  Axis.h  CMakeLists.txt  Config.cxx  Config.h  Core.cxx  Core.h  Cuts.cxx  Cuts.h  HnSparseBrowser.cxx  HnSparseBrowser.h  InputMap.cxx  InputMap.h  Manager.cxx  NdmspcCoreLinkDef.h  PointDraw.cxx  PointDraw.h  PointRun.cxx  PointRun.h  Results.cxx  Results.h  Utils.cxx  Utils.h
Event/Gitlab/: CMakeLists.txt  GitlabEvent.cxx  GitlabEvent.h  GitlabTrack.cxx  GitlabTrack.h  NdmspcGitlabEventLinkDef.h
Event/Hep/: CMakeLists.txt  HepEvent.cxx  HepEvent.h  HepTrack.cxx  HepTrack.h  NdmspcHepEventLinkDef.h
Http/: CMakeLists.txt  CloudEvent.cxx  CloudEvent.h  HttpServer.cxx  HttpServer.h  NdmspcHttpLinkDef.h  StressHistograms.cxx  StressHistograms.h
NDH/: CMakeLists.txt  HnSparse.cxx  HnSparse.h  HnSparseStress.cxx  HnSparseStress.h  NdmspcNDHLinkDef.h
Ndh/: CMakeLists.txt  HnSparse.cxx  HnSparse.h  HnSparseStress.cxx  HnSparseStress.h  NdmspcNdhLinkDef.h
Utils/: NdmspcUtils.h
alice/: AliceUtils.cxx  CMakeLists.txt
analysis/: AnalysisUtils.cxx  AnalysisUtils.h  CMakeLists.txt
base/: CMakeLists.txt  Logger.cxx  Logger.h  NCloudEvent.cxx  NCloudEvent.h  NHttpRequest.cxx  NHttpRequest.h  NHttpServer.cxx  NLogExporter.h  NLogExporterFactory.h  NLogger.cxx  NLogger.h  NObject.cxx  NObject.h  NUtils.cxx  NUtils.h  NWsClient.cxx  NWsClient.h  NWsClientInfo.cxx  NWsClientInfo.h  NWsHandler.cxx  NdmspcBaseLinkDef.h  SimpleOStreamLogRecordExporter.cxx  SimpleOStreamLogRecordExporter.h
base/opentelemetry/: NLogExporter.cxx  NLogExporter.h  NLogExporterFactory.cxx
ci/: Dockerfile  Dockerfile.base  Dockerfile.dep.al9  copr  knative-ndmspc-dev-ngnt.yaml  knative-ndmspc-dev.yaml  ndmspc.sh  nlohmann_json.sh  opentelemetry-cpp.sh  prepare-eos-slurm.sh
ci/eos/: eos-init.service  ndmspc-eos-init
ci/k8s/: knative-ndmspc-dev-default.yaml  knative-ndmspc-dev-ngnt.yaml  knative-simple.yaml
ci/slurm/: ndmspc-slurm-init  slurm.yaml
cli/: CMakeLists.txt  ndmspc-cli.cxx
cmake/: base.cmake  cmake_base.cmake  deps.cmake  ndmspc.h.in  ndmspc.sh.profile.d.in  ndmspc.spec.in
cmake/modules/: FindCUBA.cmake  FindCURL.cmake  FindGINAC.cmake  FindLIBUV.cmake  FindLIBWEBSOCKETS.cmake  FindNLOHMANN_JSON.cmake  FindOpenSSL.cmake  FindRoot.cmake  FindZEROMQ.cmake  ROOTMacros.cmake
core/: Axes.cxx  Axis.cxx  Axis.h  CMakeLists.txt  Config.cxx  Config.h  HnSparseBrowser.h  HnSparseIterator.cxx  HnSparseIterator.h  HnSparseTree.cxx  HnSparseTree.h  HnSparseTreeBranch.cxx  HnSparseTreeBranch.h  HnSparseTreeInfo.h  HnSparseTreeUtils.cxx  HnSparseTreeUtils.h  InputMap.cxx  InputMap.h  Manager.cxx  Manager.h  NBinning.cxx  NBinning.h  NBinningDef.cxx  NBinningDef.h  NBinningPoint.cxx  NBinningPoint.h  NConfig.cxx  NDimensionalExecutor.cxx  NDimensionalExecutor.h  NDimensionalIpcRunner.cxx  NDimensionalIpcRunner.h  NGnNavigator.cxx  NGnNavigator.h  NGnThreadData.cxx  NGnThreadData.h  NGnTree.cxx  NGnTree.h  NHnSparseBase.cxx  NHnSparseBase.h  NHnSparseObject.cxx  (+35 more)
core/cli/: CMakeLists.txt  ndmspc-run.cxx  ndmspc-worker.cxx
doc/: CMakeLists.txt  ndmspc.Doxyfile.in
etc/slurm/: README.md  requirements.yml  slurm.yaml
etc/systemd/: http  http.ngnt  http.stress  ndmspc-http  ndmspc-http.default  ndmspc-http@.service  ndmspc-notebook  ndmspc-notebook.default  ndmspc-notebook.ndmspc  ndmspc-notebook@.service  notebook.default
etc/template/: CMakeLists.txt  Example.cxx  Example.h  NObject.cxx.tmpl  NdmspcExampleLinkDef.h  ONamed.cxx.tmpl  ONamed.h.tmpl  OObject.h.tmpl  TNamed.cxx.tmpl  TNamed.h.tmpl  TObject.cxx.tmpl  TObject.h.tmpl
event/Gitlab/: CMakeLists.txt
event/Hep/: CMakeLists.txt  HepEvent.h  HepTrack.h  (+1 more)
hep/: AnalysisFunctions.cxx  AnalysisFunctions.h  AnalysisUtils.cxx  AnalysisUtils.h  CMakeLists.txt  NdmspcHepLinkDef.h
http/: CMakeLists.txt  NCloudEvent.h  NGnHistory.cxx  NGnHistory.h  NGnHistoryEntry.cxx  NGnHistoryEntry.h  NGnHttpServer.cxx  NGnHttpServer.h  NGnRouteContext.cxx  NGnRouteContext.h  NGnSchemaBuilder.cxx  NGnSchemaBuilder.h  NGnWorkspace.cxx  NGnWorkspace.h  NGnWsHandler.cxx  NGnWsHandler.h  NHttpRequest.cxx  NHttpRequest.h  NHttpServer.cxx  NHttpServer.h  NStressHistograms.cxx  NStressHistograms.h  NUtils.cxx  NUtils.h  NWsClient.cxx  NWsClient.h  NWsClientInfo.cxx  NWsClientInfo.h  NWsHandler.cxx  NWsHandler.h  NdmspcHttpLinkDef.h  README.md  WebSocketHandler.cxx
http/cli/: CMakeLists.txt  ndmspc-server.cxx
legacy/base/: CMakeLists.txt  Logger.cxx  Logger.h  SimpleOStreamLogRecordExporterFactory.h
macros/: NdmspcAnalysisCli.C  NdmspcAxisBrowser.C  NdmspcCreateMap.C  NdmspcCreateMapProjection.C  NdmspcDrawResult.C  NdmspcGenerateJobs.C  NdmspcInit.C  NdmspcMacro.C  NdmspcMerge.C  NdmspcPointRun.C  NdmspcRun.C  RsnFunctions.h
mon/: CMakeLists.txt  NMonJob.cxx  NMonJob.h  NMonJobManager.cxx  NMonJobManager.h  NdmspcMonLinkDef.h
ndh/: CMakeLists.txt
numcal/: CMakeLists.txt  CuhreIntegrator.cxx  CuhreIntegrator.h  DivonneIntegrator.cxx  DivonneIntegrator.h  IntegrationMethod.cxx  IntegrationMethod.h  NNumcalManager.cxx  NNumcalManager.h  NdmspcNumcalLinkDef.h  NumcalResult.cxx  NumcalResult.h  SuaveIntegrator.cxx  SuaveIntegrator.h  VegasIntegrator.cxx  VegasIntegrator.h
scripts/: copr.sh  env.sh  gen.sh  make.sh  montest.sh  ndmspc  ndmspc-run  ndmspc-run.sh  ndmspc-slurm-init  ndmspc-slurm-run-jobs  ndmspc-slurm-run-single  ndmspc.sh
src/: CMakeLists.txt  hnsi.cxx  ndh-gen.cxx  ndh-import.cxx  ndh-stress.cxx  ndmspc-cli.cxx
test/: CMakeLists.txt  NTcpTest.C  README.md  test_01_NExecutor.cxx  test_02_NStorage.cxx  test_03_NParameter.cxx  test_04_NCustomization.cxx  test_05_NNested.cxx  test_06_NBinnings.cxx  test_07_TcpBootstrapMacroParams.cxx  test_08_TcpLazyJoin.cxx  test_NGnTree.cxx  test_NHnSparseBase.cxx  test_NNumcalCuhre.cxx  test_NNumcalDivonne.cxx  test_NNumcalGinac.cxx  test_NNumcalSuave.cxx  test_NNumcalVegas.cxx  test_NTaskStateManager.cxx
(+176 files in other folders)
