set(MODULE Http)
set(PACKAGE Ndmspc${MODULE})
file(GLOB SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cxx")

set(MY_INCLUDE_DIRS
  ${OpenSSL_INCLUDE_DIRS}
  ${LIBUV_INCLUDE_DIRS}
  ${CURL_INCLUDE_DIRS}
  ${LIBWEBSOCKETS_INCLUDE_DIRS}
  ${NLOHMANN_JSON_INCLUDE_DIRS}
  ${CMAKE_SOURCE_DIR}/base
  ${CMAKE_SOURCE_DIR}/core
)
include_directories(${MY_INCLUDE_DIRS})
set(MY_EXTERNAL_LIBS
  ${OpenSSL_LIBRARIES}
  ${LIBUV_LIBRARIES}
  ${CURL_LIBRARIES}
  ${LIBWEBSOCKETS_LIBRARIES}
  ${NLOHMANN_JSON_LIBRARIES}
  RHTTP
  NdmspcBase
  NdmspcCore
)

RootLib(${PACKAGE} "${SRCS}" "${MY_EXTERNAL_LIBS}" "")

add_subdirectory(cli)
