set(MODULE Base_legacy)
set(PACKAGE Ndmspc${MODULE})
file(GLOB SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cxx")
set(MY_INCLUDE_DIRS
#  ${CURL_INCLUDE_DIRS}
  ${OPENTELEMETRY_CPP_INCLUDE_DIRS}
)
include_directories(${MY_INCLUDE_DIRS})

set(MY_EXTERNAL_LIBS
  ${OPENTELEMETRY_CPP_LIBRARIES}
#  ${CURL_LIBRARIES}
#  nlohmann_json::nlohmann_json
)
# add_library(${PACKAGE} STATIC "${SRCS}")
# target_link_libraries(${PACKAGE} ${MY_EXTERNAL_LIBS})
# install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
#   DESTINATION include/${CMAKE_PROJECT_NAME}
#   FILES_MATCHING PATTERN "*.h"
# )
RootLib(${PACKAGE} "${SRCS}" "${MY_EXTERNAL_LIBS}" "")

